# Drastic-Smurf

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  theplan.md
.github/workflows/: ci.yml  packages.yml  release.yml
assets/: drastic-smurf.desktop
src/: app.rs  main.rs
src/core/: auth.rs  cluster_manager.rs  config.rs  es_client.rs  mod.rs  ssh_tunnel.rs
src/modules/: appearance.rs  clusters.rs  console.rs  dashboard.rs  discover.rs  indices.rs  mod.rs  observability.rs  pipeline.rs  pipeline_engine.rs  snapshot.rs  status.rs  tasks.rs
src/ui/: animations.rs  log_buffer.rs  mod.rs  theme.rs  toasts.rs  vfx.rs  widgets.rs  wizard.rs
wix/: main.wxs
