[package]
name = "drastic-smurf"
version = "0.1.0"
edition = "2024"
authors = ["Zac <zac@example.com>"]
description = "Extensible desktop GUI for monitoring and interacting with multiple Elasticsearch clusters"
license = "MIT"
repository = "https://github.com/zac/drastic-smurf"

[dependencies]
eframe = { version = "0.31", features = ["default", "wgpu"] }
egui = "0.31"
# egui_extras = { version = "0.31", features = ["syntect"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3.6", features = ["linux-native"] }
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
poll-promise = { version = "0.3", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
