[package]
name = "drastic-smurf"
version = "0.2.6"
edition = "2024"
authors = ["Zac <zac@example.com>"]
description = "Extensible desktop GUI for monitoring and interacting with multiple Elasticsearch clusters"
license = "MIT"
repository = "https://github.com/zacpr/a_drastic_smurf"

[dependencies]
eframe = { version = "0.31", features = ["default", "wgpu"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "sync", "time", "macros", "process"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
poll-promise = { version = "0.3", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["sync-secret-service"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[profile.release]
opt-level = 3
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.deb]
name = "drastic-smurf"
maintainer = "Zac <zac@example.com>"
copyright = "2026, Zac <zac@example.com>"
extended-description = "Extensible desktop GUI for monitoring and interacting with multiple Elasticsearch clusters. Features snapshot monitoring, cluster status dashboard, task monitoring, and an Elastic console."
section = "utils"
priority = "optional"
assets = [
    ["target/release/drastic-smurf", "usr/bin/drastic-smurf", "755"],
    ["assets/drastic-smurf.desktop", "usr/share/applications/drastic-smurf.desktop", "644"],
]

[package.metadata.wix]
upgrade-guid = "FDB98D5B-B94E-4675-A068-A3FA32791583"
path-guid = "FD64BF1C-B505-4290-9B79-976525C8EB22"
license = false
eula = false

[package.metadata.generate-rpm]
name = "drastic-smurf"
summary = "Extensible desktop GUI for monitoring and interacting with multiple Elasticsearch clusters"
license = "MIT"
assets = [
    { source = "target/release/drastic-smurf", dest = "/usr/bin/drastic-smurf", mode = "0755" },
    { source = "assets/drastic-smurf.desktop", dest = "/usr/share/applications/drastic-smurf.desktop", mode = "0644" },
]
